update one for project

--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
     <!-- Start Header -->
     <header>
       <div class="container">
-        <a href="#" class="logo"> <img src="images/logo.png" alt="logo" /> </a>
+        <a href="https://abdallahsayedahmed.github.io/Kasper/" class="logo">
+          <img src="images/logo.png" alt="logo" />
+        </a>
         <nav>
           <i class="fa-solid fa-bars toggle-menu"></i>
           <ul>
-            <li><a href="#" class="active" class>Home</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#home" class="active" class>Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#pricing">Pricing</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
           <div class="form">
             <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
@@ -74,7 +76,7 @@
     <!-- End Landing -->
 
     <!-- Start Services -->
-    <div class="services">
+    <div class="services" id="services">
       <div class="container">
         <div class="main-heading">
           <h2>Services</h2>
@@ -188,7 +190,7 @@
     <!-- End Design -->
 
     <!-- Start Portfolio -->
-    <div class="portfolio">
+    <div class="portfolio" id="portfolio">
       <div class="container">
         <div class="main-heading">
           <h2>Portfolio</h2>
@@ -442,7 +444,7 @@
     <!-- End Quote -->
 
     <!-- Start Pricing -->
-    <div class="pricing">
+    <div class="pricing" id="pricing">
       <div class="container">
         <div class="main-heading">
           <h2>Pricing</h2>
@@ -545,7 +547,7 @@
     <!-- End Subscribe -->
 
     <!-- Start Contact -->
-    <div class="contact">
+    <div class="contact" id="contact">
       <div class="container">
         <div class="main-heading">
           <h2>Contact Us</h2>
